- Lua asdoc: added support for events - Lua asdoc: fixed / tweaked doc template - Lua asdoc: documented azIcon - Lua: Created a proper class for menu items
git-svn-id: https://appetizer.googlecode.com/svn@239 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/_LuaDoc/Templates/index-list.html
+++ b/trunk/_LuaDoc/Templates/index-list.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Adobe Flex 2 Language Reference</title>
+	<title>Appetizer Plugin API Documentation</title>
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<base target="classFrame" />
 </head>
