--- a/trunk/_LuaDoc/Templates/index.html
+++ b/trunk/_LuaDoc/Templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Adobe Flex 2 Language Reference</title>
+    <title>Appetizer Plugin API Documentation</title>
     <script language="javascript" type="text/javascript">
     	<!--
         window.onload=function(){
