--- a/trunk/_LuaDoc/Templates/package-frame.html
+++ b/trunk/_LuaDoc/Templates/package-frame.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <title>Adobe Flex 2 Language Reference</title>
+    <title>Appetizer Plugin API Documentation</title>
 </head>
-<frameset rows="100%" border="2" framespacing="1" bordercolor="#AAAAAA">
+<frameset rows="20%,80%" border="2" framespacing="1" bordercolor="#AAAAAA">
+    <frame src="package-list.html" name="packageListFrame" />
     <frame src="all-classes.html" name="classListFrame" />
     <noframes>
         <body>
