--- a/trunk/_LuaDoc/Templates/title-bar.html
+++ b/trunk/_LuaDoc/Templates/title-bar.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Adobe Flex 2 Language Reference</title>
+		<title>Appetizer Plugin API Documentation</title>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="print.css" type="text/css" media="print" />
 		<script language="javascript" type="text/javascript" src="asdoc.js" />
@@ -12,7 +12,7 @@
 			<td class="titleTableTopNav" align="right">
 				<a target="classFrame" href="package-summary.html" onclick="loadClassListFrame('all-classes.html')">All&#xA0;Packages</a>&#xA0;|&#xA0;<a target="classFrame" href="class-summary.html" onclick="loadClassListFrame('all-classes.html')">All&#xA0;Classes</a>&#xA0;|&#xA0;<a target="classFrame" href="all-index-A.html" onclick="loadClassListFrame('index-list.html')">Index</a>&#xA0;|&#xA0;<a href="" onclick="parent.location=parent.classFrame.location">No&#xA0;Frames</a>&#160;&#160;
 			</td>
-			<!-- <td class="titleTableLogo" align="right" rowspan="3"><img src="images/logo.jpg" class="logoImage" title="Adobe Logo" alt="Adobe Logo" /></td> -->
+			<td class="titleTableLogo" align="right" rowspan="3"><a href="http://app.etizer.org"><img src="images/logo.jpg" class="logoImage" title="Appetizer Logo" alt="Appetizer Logo" /></a></td>
 			<td align="right" rowspan="3"><p></p> </td>
 		  </tr>
 		  <tr class="titleTableRow2">
