--- a/trunk/_LuaDoc/Templates/index.html
+++ b/trunk/_LuaDoc/Templates/index.html
@@ -32,7 +32,7 @@
         <p>
         This document is designed to be viewed using the frames feature. If you see this message, you are using a non-frame-capable web client.
         <br />
-        Link to <a href="package-summary.html">Non-frame version.</a>
+        Link to <a href="package-detail.html">Non-frame version.</a>
         </p>
         </body>
     </noframes>
